--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>La CNV</title>
+    <title>La CNV</title>
 </head>
+<style>
+    body {
+        background-color: beige;
+    }
+</style>
 <body>
     <h1>Comunicación No Verbal</h1>
-    <ul>
-      <li><a href="#función de la cnv">Función de la cnv</a></li>
-      <li><a href="#impacto en la sociedad">Impacto en la sociedad</a></li>
-      <li><a href="#Que es la cnv"> Definición</a></li>
-      <li><a href="#Sistemas de la cnv">Distintos sistemas</a></li>
-    </ul>
-
-    <h2 id="función de la cnv">Función de la cnv</h2>
-     <p></p>
- 
-    <h2 id="impacto en la sociedad">Impacto en la sociedad</h2>
-     <p></p>
-   
-    <h2 id="Que es la cnv">Definición</h2>
-     <p></p>
-    <h2 id="Sistemas de la cnv">Distintos sistemas</h2>
-    <p></p>
-
+    <p>¿Qué es la CNV? <a href="Qué es la cnv.html"> Descubre más</a>!</p>
+    <p>Función de la CNV <a href="Función de la cnv.html"> Descubre más</a>!</p>
+    <p>Impacto de la CNV <a href="impacto de la cnv.html"> Descubre más</a>!</p>
 </body>
 </html>
+ 
