--- a/index.html
+++ b/index.html
@@ -1,18 +1,56 @@
+<!DOCTYPE.html>
 <!DOCTYPE html>
 <html>
-<head>
-    <title>La CNV</title>
+    <head>
+<title>Función de la CNV</title>
 </head>
-<style>
-    body {
-        background-color: beige;
-    }
+<style> 
+table,th,td{
+    border: 1px solid black;
+    background: rgb(245, 244, 244);
+}
+
+
+
 </style>
 <body>
-    <h1>Comunicación No Verbal</h1>
-    <p>¿Qué es la CNV? <a href="Qué es la cnv.html"> Descubre más</a>!</p>
-    <p>Función de la CNV <a href="Función de la cnv.html"> Descubre más</a>!</p>
-    <p>Impacto de la CNV <a href="impacto de la cnv.html"> Descubre más</a>!</p>
+<h1>Estas funciones son esenciales para la comunicación humana y permiten que las personas expresen emociones, aclaren mensajes, regulen las interacciones sociales y se conecten con los demás de manera efectiva.</h1>
+<p><a href="index.html">Página principal</a>!</p>
+
+<div class="card" style="width: 18rem;">
+    <img src="descarga.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Comunicacion no verbal</h5>
+      <p class="card-text">Sirve para que nuestro público comprenda exactamente lo que queremos decir sin dar lugar a interpretaciones erróneas, y a que pongan toda su atención en nosotros. Transmiten nuestro estado de ánimo: mediante un sólo gesto podemos comunicar sin palabras nuestro estado de ánimo o la sensación que nos gustaría transmitir.</p>
+    </div>
+  </div>
+
+<table class="default">
+
+<tr>
+<th>Complementar la Comunicación Verbal</th> 
+<th >Expresar Emociones</th>
+<th>Facilitar la Comprensión</th>
+<th>Reemplazar la Comunicación Verbal</th>
+<th>Regular la Conversación</th>
+<th>Mostrar Conexión y Relación</th>
+<th>Indicar Estado de Ánimo y Actitud</th>
+<th>Transmitir Cultura y Contexto</th>
+</tr>
+<tr>
+    <td>Refuerza y complementa los mensajes verbales.</td>
+    <td>Transmite emociones y sentimientos.</td>
+    <td>Ayuda a aclarar ideas y conceptos.</td>
+    <td>En situaciones especiales, puede ser la forma principal de comunicación.</td>
+    <td>Ayuda a organizar el flujo de la conversación.</td>
+    <td>Indica cercanía emocional y conexión interpersonal.</td>
+    <td>Refleja el estado de ánimo y la actitud de una persona.</td>
+    <td>Puede variar según la cultura y el contexto.</td>
+</tr>
+<table>
+        
 </body>
+
 </html>
- 
+
+
