--- a/Función de la cnv.html
+++ b/Función de la cnv.html
@@ -4,9 +4,46 @@
 <title>Función de la CNV</title>
 </head>
 <style> 
-table,th,td{
-    border: 1px solid black;
-    background: red;
+/* Estilos para el título h1 */
+h1 {
+    font-size: 24px;
+    color: #333;
+    text-align: center;
+}
+
+/* Estilos para enlaces */
+a {
+    text-decoration: none;
+    color: #007BFF;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/* Estilos para la tabla */
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    border: 1px solid #000;
+    padding: 8px;
+    text-align: center;
+}
+
+th {
+    background-color: #333;
+    color: #FFF;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
 }
 
 </style>
@@ -41,3 +78,5 @@ table,th,td{
 </body>
 
 </html>
+
+
