--- a/Qué es la cnv.html
+++ b/Qué es la cnv.html
@@ -1,46 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Qué es la CNV?</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: rgb(238, 247, 159);
+            margin-top: 2%;
+            margin-left: 5%;
+            margin-right: 5%;
+        }
+        h1 {
+            font-size: 24px;
+        }
+        h2 {
+            font-size: 20px;
+        }
+        ul {
+            list-style-type: none;
+        }
+        ul li {
+            margin-bottom: 5px;
+        }
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
-<style>
-    body {
-        font-variant: Arial; Helvetica; sans-serif;
-        background-color: rgb(133, 233, 224);
-        margin-top: 2%;
-    }
-</style>
 <body>
+    <h1>¿Qué es la Comunicación No Verbal (CNV)?</h1>
+    <p>La comunicación no verbal se refiere a todas las formas de comunicación que no involucran el uso de palabras habladas o escritas. En otras palabras, se trata de la transmisión de mensajes y significados a través de señales no verbales, como gestos, expresiones faciales, posturas corporales, movimientos, tono de voz, contacto visual, entre otros. La comunicación no verbal puede ser igual de poderosa y significativa que la comunicación verbal, y a menudo complementa y enriquece la comunicación verbal.</p>
 
-<h1> La comunicación no verbal se refiere a todas las formas de comunicación que no involucran el uso de palabras habladas o escritas. En otras palabras, se trata de la transmisión de mensajes y significados a través de señales no verbales, como gestos, expresiones faciales, posturas corporales, movimientos, tono de voz, contacto visual, entre otros. La comunicación no verbal puede ser igual de poderosa y significativa que la comunicación verbal, y a menudo complementa y enriquece la comunicación verbal.</h1>
-<h2><p><a href="index.html">Página principal</a>!</p></h2>
-<ul>
-    <li><a href="#Extenciones faciales">Extenciones faciales</a></li>
-    <li><a href="#Gestos">Gestos</a></li>
-    <li><a href="#Postura corporal"> Postura corporal</a></li>
-    <li><a href="#Contacto visual">Contacto visual</a></li>
-    <li><a href="#Tono de voz">Tono de voz</a></li>
-    <li><a href="#Espacio personal">Espacio personal</a></li>
-    <li><a href="#Toque">Toque</a></li>
-     </ul>
+    <h2><a href="index.html">Página principal</a>!</h2>
 
-  <h2 id="Extenciones faciales">Extenciones faciales</h2>
-   <p>Las expresiones faciales, como una sonrisa o una ceño fruncido, pueden transmitir emociones y sentimientos.</p>
+    <ul>
+        <li><a href="#Expresiones-faciales">Expresiones faciales</a></li>
+        <li><a href="#Gestos">Gestos</a></li>
+        <li><a href="#Postura-corporal">Postura corporal</a></li>
+        <li><a href="#Contacto-visual">Contacto visual</a></li>
+        <li><a href="#Tono-de-voz">Tono de voz</a></li>
+        <li><a href="#Espacio-personal">Espacio personal</a></li>
+        <li><a href="#Toque">Toque</a></li>
+    </ul>
 
-  <h2 id="Gestos">Gestos</h2>
-   <p>Las expresiones faciales, como una sonrisa o una ceño fruncido, pueden transmitir emociones y sentimientos.</p>
+    <h2 id="Expresiones-faciales">Expresiones faciales</h2>
+    <p>Las expresiones faciales, como una sonrisa o una ceño fruncido, pueden transmitir emociones y sentimientos.</p>
 
-  <h2 id="Postura corporal">Postura corporal</h2>
-   <p> La manera en que alguien se coloca o se mueve puede indicar su nivel de comodidad, confianza o interés en una conversación.</p>
-  <h2 id="Contacto visual">Contacto visual</h2>
-  <p>El contacto visual, como mirar a los ojos de alguien o evitarlo, puede comunicar la atención, la sinceridad y la conexión emocional.</p>
-<h2 id="Tono de voz"> Tono de voz</h2>
-<p> El tono de voz, la velocidad y el volumen pueden influir en cómo se interpreta un mensaje. Por ejemplo, un tono de voz agitado puede indicar nerviosismo o emoción.</p>
-<h2 id="Espacio personal">Espacio personal</h2>
-<p>La distancia física entre las personas puede comunicar diferentes niveles de intimidad, comodidad o autoridad en una interacción.</p>
-<h2 id="Toque">Toque</h2>
-<p> El contacto físico, como un apretón de manos, un abrazo o un golpecito en el hombro, puede transmitir afecto, apoyo o reconocimiento.</p>
+    <h2 id="Gestos">Gestos</h2>
+    <p>Los gestos, como movimientos de las manos, pueden complementar y reforzar la comunicación verbal.</p>
+
+    <h2 id="Postura-corporal">Postura corporal</h2>
+    <p>La manera en que alguien se coloca o se mueve puede indicar su nivel de comodidad, confianza o interés en una conversación.</p>
+
+    <h2 id="Contacto-visual">Contacto visual</h2>
+    <p>El contacto visual, como mirar a los ojos de alguien o evitarlo, puede comunicar la atención, la sinceridad y la conexión emocional.</p>
+
+    <h2 id="Tono-de-voz">Tono de voz</h2>
+    <p>El tono de voz, la velocidad y el volumen pueden influir en cómo se interpreta un mensaje. Por ejemplo, un tono de voz agitado puede indicar nerviosismo o emoción.</p>
+
+    <h2 id="Espacio-personal">Espacio personal</h2>
+    <p>La distancia física entre las personas puede comunicar diferentes niveles de intimidad, comodidad o autoridad en una interacción.</p>
+
+    <h2 id="Toque">Toque</h2>
+    <p>El contacto físico, como un apretón de manos, un abrazo o un golpecito en el hombro, puede transmitir afecto, apoyo o reconocimiento.</p>
 </body>
-
-
 </html>
