--- a/index.html
+++ b/index.html
@@ -3,35 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>Comunicación No Verbal (CNV)</title>
-    <style>
-        body {
-            background-color: beige;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        h1 {
-            text-align: center;
-        }
-        p {
-            text-align: center;
-        }
-        a {
-            text-decoration: none;
-            color: blue;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        #message {
-            display: none;
-            text-align: center;
-        }
-    </style>
+    
 </head>
+<style>
+    body {
+        background-color: beige;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    h1 {
+        text-align: center;
+    }
+    p {
+        text-align: center;
+    }
+    a {
+        text-decoration: none;
+        color: rgb(2, 2, 20);
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+    #message {
+        display: none;
+        text-align: center;
+    }
+
+</style>
 <body>
+    <header>
+       <div class="logo">
+<img src="logo.jpeg" alt="logo de la compañia">
+<h2> Alumnas Humanidades</h2>
+</div> 
+<nav>
+    <a href="index.html" class="nav-link">Inicio</a>
+    <a href="formulario.html" class="nav-link">Suscripción</a>
+    <a href="sobrenosotras.html" class="nav-link">Sobre Nosotros</a>
+</nav>
+
+    </header>
     <h1>Comunicación No Verbal</h1>
     <p>¿Qué es la CNV? <a href="Qué es la cnv.html"> Descubre más</a>!</p>
     <p>Función de la CNV <a href="Función de la cnv.html"> Descubre más</a>!</p>
     <p>Impacto de la CNV <a href="impacto de la cnv.html"> Descubre más</a>!</p>
-    <h2>Contáctanos</h2>
-    <p> Nuestro boletin <a href="formulario.html"> Suscribete</a>!</p>
+  
+ 
