--- a/Función de la cnv.html
+++ b/Función de la cnv.html
@@ -1,82 +1,113 @@
 <!DOCTYPE html>
-<html>
-    <head>
-<title>Función de la CNV</title>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Función de la Comunicación No Verbal (CNV)</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+
+        h1 {
+            font-size: 24px;
+            color: #333;
+            text-align: center;
+            padding: 20px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #007BFF;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th, td {
+            border: 1px solid #000;
+            padding: 8px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #333;
+            color: #FFF;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #ddd;
+        }
+
+        section {
+            display: flex;
+            max-width: 300px;
+    
+            margin: 0 auto;
+            justify-content: space-between;
+        }
+
+        section img {
+            max-width: 100%;
+            height: auto;
+            object-fit: cover;
+            opacity: 0.8;
+            transition: 0.5s ease;
+        }
+
+        section img:hover {
+            cursor: pointer;
+            transform: scale(1.0); 
+            opacity: 1;
+        }
+    </style>
 </head>
-<style> 
-/* Estilos para el título h1 */
-h1 {
-    font-size: 24px;
-    color: #333;
-    text-align: center;
-}
-
-/* Estilos para enlaces */
-a {
-    text-decoration: none;
-    color: #007BFF;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-/* Estilos para la tabla */
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-th, td {
-    border: 1px solid #000;
-    padding: 8px;
-    text-align: center;
-}
-
-th {
-    background-color: #333;
-    color: #FFF;
-}
-
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-tr:hover {
-    background-color: #ddd;
-}
-
-</style>
 <body>
-<h1>Estas funciones son esenciales para la comunicación humana y permiten que las personas expresen emociones, aclaren mensajes, regulen las interacciones sociales y se conecten con los demás de manera efectiva.</h1>
-<p><a href="index.html">Página principal</a>!</p>
+    <h1>Las funciones de la Comunicación No Verbal (CNV) son esenciales para la comunicación humana. Permiten a las personas expresar emociones, aclarar mensajes, regular interacciones sociales y conectarse de manera efectiva.</h1>
+    <p><a href="index.html">Volver a la página principal</a></p>
 
-<table class="default">
+    <table>
+        <tr>
+            <th>Complementar la Comunicación Verbal</th>
+            <th>Expresar Emociones</th>
+            <th>Facilitar la Comprensión</th>
+            <th>Reemplazar la Comunicación Verbal</th>
+            <th>Regular la Conversación</th>
+            <th>Mostrar Conexión y Relación</th>
+            <th>Indicar Estado de Ánimo y Actitud</th>
+            <th>Transmitir Cultura y Contexto</th>
+        </tr>
+        <tr>
+            <td>Refuerza y complementa los mensajes verbales.</td>
+            <td>Transmite emociones y sentimientos.</td>
+            <td>Ayuda a aclarar ideas y conceptos.</td>
+            <td>En situaciones especiales, puede ser la forma principal de comunicación.</td>
+            <td>Ayuda a organizar el flujo de la conversación.</td>
+            <td>Indica cercanía emocional y conexión interpersonal.</td>
+            <td>Refleja el estado de ánimo y la actitud de una persona.</td>
+            <td>Puede variar según la cultura y el contexto.</td>
+        </tr>
+    </table>
 
-<tr>
-<th>Complementar la Comunicación Verbal</th> 
-<th >Expresar Emociones</th>
-<th>Facilitar la Comprensión</th>
-<th>Reemplazar la Comunicación Verbal</th>
-<th>Regular la Conversación</th>
-<th>Mostrar Conexión y Relación</th>
-<th>Indicar Estado de Ánimo y Actitud</th>
-<th>Transmitir Cultura y Contexto</th>
-</tr>
-<tr>
-    <td>Refuerza y complementa los mensajes verbales.</td>
-    <td>Transmite emociones y sentimientos.</td>
-    <td>Ayuda a aclarar ideas y conceptos.</td>
-    <td>En situaciones especiales, puede ser la forma principal de comunicación.</td>
-    <td>Ayuda a organizar el flujo de la conversación.</td>
-    <td>Indica cercanía emocional y conexión interpersonal.</td>
-    <td>Refleja el estado de ánimo y la actitud de una persona.</td>
-    <td>Puede variar según la cultura y el contexto.</td>
-</tr>
-<table>
-        
+    <section>
+        <img src="imagen 1.jpeg" alt="Imagen 1">
+        <img src="imagen2.jpeg" alt="Imagen 2">
+        <img src="imagen 3.jpeg" alt="Imagen 3">
+        <img src="imagen 4.jpeg" alt="Imagen 4">
+    </section>
 </body>
-
 </html>
-
-
