--- a/impacto de la cnv.html
+++ b/impacto de la cnv.html
@@ -4,18 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impacto en la sociedad</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Agrega un enlace a tu hoja de estilos si es necesario -->
 </head>
+<style>
+     body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        header {
+            background-color: #f8de69f5;
+            text-align: center;
+            padding: 20px 0;
+        }
+        h1 {
+            color: #110f0f;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+        }
+        p {
+            margin: 0 0 20px;
+            line-height: 1.5;
+        }
+</style>
 <body>
     <header>
         <h1>Impacto en la sociedad</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Página principal</a></li>
-            </ul>
-        </nav>
+      
     </header>
-
+<div class="conteiner">
+    <nav>
+        <ul>
+            <li><a href="index.html">Página principal</a></li>
+        </ul>
+    </nav>
     <main>
         <section>
             <h2>La comunicación no verbal en la sociedad</h2>
@@ -46,5 +73,6 @@
     <footer>
         <p>Visita nuestro <a href="https://www.youtube.com/watch?v=WVqBva8IvjQ" target="_blank">canal de YouTube</a> para obtener más información.</p>
     </footer>
+</div>
 </body>
 </html>
