--- a/index.html
+++ b/index.html
@@ -48,5 +48,7 @@
     <p>¿Qué es la CNV? <a href="Qué es la cnv.html"> Descubre más</a>!</p>
     <p>Función de la CNV <a href="Función de la cnv.html"> Descubre más</a>!</p>
     <p>Impacto de la CNV <a href="impacto de la cnv.html"> Descubre más</a>!</p>
-  
+    
+    <footer>
+        <p>Realizado por Lewkowicz, Delfina; Arata, Mariana; Prieto, Valentina; Traverso ReginaS (5°H)</p>
  
