--- a/Función de la cnv.html
+++ b/Función de la cnv.html
@@ -3,81 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Función de la Comunicación No Verbal (CNV)</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            color: #333;
-        }
-
-        h1 {
-            font-size: 24px;
-            color: #333;
-            text-align: center;
-            padding: 20px;
-        }
-
-        a {
-            text-decoration: none;
-            color: #007BFF;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            border: 1px solid #000;
-            padding: 8px;
-            text-align: center;
-        }
-
-        th {
-            background-color: #333;
-            color: #FFF;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        tr:hover {
-            background-color: #ddd;
-        }
-
-        section {
-            display: flex;
-            max-width: 300px;
-    
-            margin: 0 auto;
-            justify-content: space-between;
-        }
-
-        section img {
-            max-width: 100%;
-            height: auto;
-            object-fit: cover;
-            opacity: 0.8;
-            transition: 0.5s ease;
-        }
-
-        section img:hover {
-            cursor: pointer;
-            transform: scale(1.0); 
-            opacity: 1;
-        }
-    </style>
+         
 </head>
 <body>
+  <header>
     <h1>Las funciones de la Comunicación No Verbal (CNV) son esenciales para la comunicación humana. Permiten a las personas expresar emociones, aclarar mensajes, regular interacciones sociales y conectarse de manera efectiva.</h1>
+  </header>
+  <div class="conteiner">
     <p><a href="index.html">Volver a la página principal</a></p>
 
     <table>
@@ -109,5 +43,6 @@
         <img src="imagen 3.jpeg" alt="Imagen 3">
         <img src="imagen 4.jpeg" alt="Imagen 4">
     </section>
+  </div>
 </body>
 </html>
