--- a/Qué es la cnv.html
+++ b/Qué es la cnv.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(238, 247, 159);
+            background-color: rgb(233, 236, 204);
             margin-top: 2%;
             margin-left: 5%;
             margin-right: 5%;
@@ -27,15 +27,38 @@
         a {
             text-decoration: none;
         }
+        header {
+            background-color: #f8de69f5;
+            text-align: center;
+            padding: 20px 0;
+        }
+        .conteiner{
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+        }
+        p {
+            margin: 0 0 20px;
+            line-height: 1.5;
+        }
+
     </style>
 </head>
 <body>
-    <h1>¿Qué es la Comunicación No Verbal (CNV)?</h1>
-    <p>La comunicación no verbal se refiere a todas las formas de comunicación que no involucran el uso de palabras habladas o escritas. En otras palabras, se trata de la transmisión de mensajes y significados a través de señales no verbales, como gestos, expresiones faciales, posturas corporales, movimientos, tono de voz, contacto visual, entre otros. La comunicación no verbal puede ser igual de poderosa y significativa que la comunicación verbal, y a menudo complementa y enriquece la comunicación verbal.</p>
-
+    <header>
+        <h1>¿Qué es la Comunicación No Verbal (CNV)?</h1>
+    </header>
+ <div class="conteiner">
     <h2><a href="index.html">Página principal</a>!</h2>
-
-    <ul>
+    <p>El tono de voz es otro componente crucial de la comunicación no verbal. Refleja la manera en que se dice algo y puede transmitir una amplia gama de emociones, actitudes y significados. Aquí te explico algunos aspectos importantes sobre el tono de voz.</p>
+    <p>Es importante recordar que el tono de voz se combina con otras formas de comunicación no verbal, como las expresiones faciales, gestos y postura corporal, para transmitir un mensaje completo y preciso. También es fundamental tener en cuenta el contexto de la situación y la relación entre las personas involucradas para interpretar adecuadamente el tono de voz.</p>
+    <p> La postura corporal es otra forma importante de comunicación no verbal que implica la posición y los movimientos del cuerpo. Puede proporcionar información sobre el estado emocional, la actitud, el nivel de comodidad o incomodidad de una persona, así como su nivel de confianza o inseguridad.</p>
+    <p>El contacto visual es una forma poderosa de comunicación no verbal que implica establecer y mantener contacto visual con otra persona. La forma en que una persona utiliza el contacto visual puede transmitir una variedad de mensajes y revelar información sobre su nivel de interés, confianza, respeto y comodidad en una situación determinada.</p>
+    <p>Sin embargo, es importante recordar que la cantidad y la duración del contacto visual pueden variar según la cultura, el contexto y la relación entre las personas. Algunas personas pueden sentirse incómodas si se les mantiene un contacto visual demasiado prolongado, mientras que otras pueden interpretar la falta de contacto visual como falta de interés o desconfianza.</p>
+    <p>Por otro lado, evitar el contacto visual en exceso o de manera constante puede interpretarse como falta de interés o incluso deshonestidad. Es importante encontrar un equilibrio y ajustar el nivel de contacto visual según la situación y las preferencias de la persona con la que estás interactuando.</p>
+    <p>En resumen, el contacto visual es una herramienta valiosa en la comunicación no verbal que puede ser utilizada para transmitir interés, confianza, respeto y empatía. Sin embargo, es importante estar consciente de las diferencias culturales y las preferencias individuales al interpretar y utilizar el contacto visual.</p>
+     <ul>
         <li><a href="#Expresiones-faciales">Expresiones faciales</a></li>
         <li><a href="#Gestos">Gestos</a></li>
         <li><a href="#Postura-corporal">Postura corporal</a></li>
@@ -65,5 +88,6 @@
 
     <h2 id="Toque">Toque</h2>
     <p>El contacto físico, como un apretón de manos, un abrazo o un golpecito en el hombro, puede transmitir afecto, apoyo o reconocimiento.</p>
+</div>
 </body>
 </html>
