--- a/sobrenosotras.html
+++ b/sobrenosotras.html
@@ -30,6 +30,11 @@
             margin: 0 0 20px;
             line-height: 1.5;
         }
+        footer{
+            background-color: #f8de69f5;
+            text-align: center;
+            padding: 20px 0;
+        }
     </style>
 </head>
 <body>
@@ -43,6 +48,8 @@
         <p>Nuestro proyecto surge de la fascinación por los gestos, expresiones faciales y otras formas de comunicación que no dependen de las palabras. Entendemos que este lenguaje silencioso puede ser tan poderoso e influyente como las conversaciones verbales.</p>
         <p>A lo largo de nuestra trayectoria académica, hemos investigado y profundizado en diversas teorías y estudios relacionados con la comunicación no verbal. Queremos compartir este conocimiento con ustedes, ofreciendo recursos y herramientas que les permitan comprender y utilizar de manera efectiva este aspecto crucial de la comunicación.</p>
         <p>¡Esperamos que disfruten explorando nuestra página y que encuentren información valiosa que les ayude en su propio camino hacia una comunicación más efectiva y consciente! Si tienen alguna pregunta o sugerencia, no duden en contactarnos. Estamos ansiosas por compartir este conocimiento con ustedes.</p>
+        <footer>
+        <p>Realizado por Lewkowicz, Delfina; Arata, Mariana; Prieto, Valentina; Traverso ReginaS (5°H)</p>
     </div>
 </body>
 </html>
