--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     body {
         background-color: beige;
         font-family: Arial, Helvetica, sans-serif;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        margin: 0;
     }
     h1 {
         text-align: center;
@@ -48,7 +52,11 @@
     <p>¿Qué es la CNV? <a href="Qué es la cnv.html"> Descubre más</a>!</p>
     <p>Función de la CNV <a href="Función de la cnv.html"> Descubre más</a>!</p>
     <p>Impacto de la CNV <a href="impacto de la cnv.html"> Descubre más</a>!</p>
-    
+
     <footer>
-        <p>Realizado por Lewkowicz, Delfina; Arata, Mariana; Prieto, Valentina; Traverso ReginaS (5°H)</p>
- 
+        <div class="footer-content">
+            <p>Realizado por: Lewkowicz, Delfina; Arata, Mariana; Prieto, Valentina; Traverso, Regina</p>
+            <p>5° Año Humanidades</p>
+        </div>
+    </footer>
+    
