--- a/sobrenosotras.html
+++ b/sobrenosotras.html
@@ -49,7 +49,7 @@
         <p>A lo largo de nuestra trayectoria académica, hemos investigado y profundizado en diversas teorías y estudios relacionados con la comunicación no verbal. Queremos compartir este conocimiento con ustedes, ofreciendo recursos y herramientas que les permitan comprender y utilizar de manera efectiva este aspecto crucial de la comunicación.</p>
         <p>¡Esperamos que disfruten explorando nuestra página y que encuentren información valiosa que les ayude en su propio camino hacia una comunicación más efectiva y consciente! Si tienen alguna pregunta o sugerencia, no duden en contactarnos. Estamos ansiosas por compartir este conocimiento con ustedes.</p>
         <footer>
-        <p>Realizado por Lewkowicz, Delfina; Arata, Mariana; Prieto, Valentina; Traverso ReginaS (5°H)</p>
+        <p>Realizado por Lewkowicz, Delfina; Arata, Mariana; Prieto, Valentina; Traverso Regina (5°H)</p>
     </div>
 </body>
 </html>
